--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -59,6 +59,12 @@
     <servlet-name>TestServlet</servlet-name>
     <servlet-class>com.test.junit.TestServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>BookInfoServlet</servlet-name>
+    <servlet-class>com.test.web.BookInfoServlet</servlet-class>
+  </servlet>
 
 
 
@@ -100,6 +106,10 @@
   <servlet-mapping>
     <servlet-name>TestServlet</servlet-name>
     <url-pattern>/test</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>BookInfoServlet</servlet-name>
+    <url-pattern>/bookInfo</url-pattern>
   </servlet-mapping>	
   <welcome-file-list>
     <welcome-file>login.jsp</welcome-file>
