--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -65,6 +65,13 @@
     <servlet-name>BookInfoServlet</servlet-name>
     <servlet-class>com.test.web.BookInfoServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>FileUploadServletTest</servlet-name>
+    <servlet-class>com.test.web.FileUploadServletTest</servlet-class>
+  </servlet>
+
 
 
 
@@ -110,6 +117,10 @@
   <servlet-mapping>
     <servlet-name>BookInfoServlet</servlet-name>
     <url-pattern>/bookInfo</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>FileUploadServletTest</servlet-name>
+    <url-pattern>/upload</url-pattern>
   </servlet-mapping>	
   <welcome-file-list>
     <welcome-file>login.jsp</welcome-file>
